Update LOAD CSV to use URIs rather than URLs to enable access to cloud storage content ()