@@ -22,10 +22,12 @@ package org.neo4j.kernel.impl.security;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Paths;
 import org.apache.commons.lang3.SystemUtils;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.neo4j.configuration.Config;
 import org.neo4j.configuration.GraphDatabaseSettings;
 import org.neo4j.exceptions.LoadExternalResourceException;
@@ -34,40 +36,40 @@ import org.neo4j.internal.kernel.api.security.CommunitySecurityLog;
 import org.neo4j.internal.kernel.api.security.SecurityContext;
 import org.neo4j.logging.NullLog;
 
-public class URLAccessRulesTest {
+public class URIAccessRulesTest {
 
-    @Test
-    public void shouldValidateAndOpenFileUrls() throws Exception {
-
+    @ParameterizedTest
+    @ValueSource(strings = {"file", "FILE", "FiLe"})
+    public void shouldValidateAndOpenFileUrls(String fileScheme) throws Exception {
         File file = File.createTempFile("test", "csv");
-        URLAccessRules rules = new URLAccessRules(new CommunitySecurityLog(NullLog.getInstance()), Config.defaults());
+        file.deleteOnExit();
+
+        URIAccessRules rules = new URIAccessRules(new CommunitySecurityLog(NullLog.getInstance()), Config.defaults());
 
         // Windows needs triple-slashes...
         String slashes = SystemUtils.IS_OS_WINDOWS ? "///" : "//";
 
         rules.validateAndOpen(
-                SecurityContext.AUTH_DISABLED, new URL(String.format("file:%s%s", slashes, file.getAbsolutePath())));
-        rules.validateAndOpen(
-                SecurityContext.AUTH_DISABLED, new URL(String.format("FILE:%s%s", slashes, file.getAbsolutePath())));
-
-        file.delete();
+                SecurityContext.AUTH_DISABLED,
+                new URI(String.format("%s:%s%s", fileScheme, slashes, file.getAbsolutePath())));
     }
 
     @Test
     public void shouldNotReadUnknownScheme() {
-        URLAccessRules rules = new URLAccessRules(new CommunitySecurityLog(NullLog.getInstance()), Config.defaults());
+        URIAccessRules rules = new URIAccessRules(new CommunitySecurityLog(NullLog.getInstance()), Config.defaults());
         assertThrows(
                 URLAccessValidationError.class,
                 () -> rules.validateAndOpen(
                         SecurityContext.AUTH_DISABLED,
-                        new URL("jar:http://www.foo.com/bar/baz.jar!/COM/foo/test.csv")));
+                        new URI("jar:http://www.foo.com/bar/baz.jar!/COM/foo/test.csv")));
     }
 
     @Test
     public void shouldNotAllowReadOutsideOfImportDir() throws Exception {
-
         File file = File.createTempFile("test", "csv");
-        URLAccessRules rules = new URLAccessRules(
+        file.deleteOnExit();
+
+        URIAccessRules rules = new URIAccessRules(
                 new CommunitySecurityLog(NullLog.getInstance()),
                 Config.defaults(GraphDatabaseSettings.load_csv_file_url_root, Paths.get("/import")));
 
@@ -78,6 +80,6 @@ public class URLAccessRulesTest {
                 LoadExternalResourceException.class,
                 () -> rules.validateAndOpen(
                         SecurityContext.AUTH_DISABLED,
-                        new URL(String.format("file:%s%s", slashes, file.getAbsolutePath()))));
+                        new URI(String.format("file:%s%s", slashes, file.getAbsolutePath()))));
     }
 }
